# focus-track-api

./: .dockerignore  .gitignore  DEBUG.md  Dockerfile  Dockerfile 2  Dockerfile.dev  README.md  compose-dev.yaml  compose.yaml  debug.sh  entrypoint-dev.sh  entrypoint.sh  fly.toml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: pipeline.yaml
focus_track_api/: app.py  database.py  models.py  schemas.py  security.py
focus_track_api/routers/: attention.py  auth.py  daily_summary.py  study_session.py  todos.py  user_settings.py  users.py
focus_track_api/schemas/: attention.py  daily_summary.py  session_metrics.py  study_session.py  user_settings.py  users.py
focus_track_api/services/: attention.py  attention_scorer.py  daily_summary.py  eye_detector.py  face_geometry.py  pose_estimation.py  study_session.py  user_settings.py  users.py
focus_track_api/utils/: constants.py  utils.py
migrations/: env.py
migrations/versions/: 1a89abec6f0a_remove_date_from_daily_summaries.py  40a0ca1fc57d_update_daily_summaries_table.py  4772ece1c9c0_initial.py  708e2497820c_fix_user_table.py  747197aaed8a_deixa_end_time_nullable.py  a2215e6debb9_remove_sound_and_notifications_in_user_.py  c2d5d2b6cfe0_create_users_table.py  cfc6172cef23_initial_schema.py  f3be2eab21e9_add_date.py  (+1 more)
tests/: conftest.py  factories.py  test_app.py  test_auth.py  test_daily_summary.py  test_daily_summary_endpoints.py  test_db.py  test_security.py  test_study_session.py  test_study_session_endpoints.py  test_user_settings.py  test_user_settings_endpoints.py  test_users.py
