[project]
name = "focus-track-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Reinan", email = "reinandesouza01@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"  # Faixa ajustada para evitar conflitos com dependências
dependencies = [
    "fastapi[standard] (>=0.115.6,<0.116.0)",
    "opencv-python[standard] (>=4.10.0.84,<5.0.0.0)",
    "numpy (>=1.26,<2.0)",
    "mediapipe[standart] (>=0.10.20,<0.11.0)",
]

[tool.poetry.dev-dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
taskipy = { version = "^1.14.1", python = "<4.0" }  # Compatibilidade explícita para evitar erros
ruff = "^0.8.6"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check .; ruff check . --diff'
format = 'ruff check . --fix; ruff format .'
run = 'fastapi dev focus_track_api/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=focus_track_api -vv'
post_test = 'coverage html'